fix(combat): initiative
* fix initiative button not showing up

#2018

--- a/styles/starwarsffg.css
+++ b/styles/starwarsffg.css
@@ -2953,3 +2953,12 @@ img {
 .starwarsffg.sheet.item .item-sheet-career .signatureability-pill.item-pill2 .item-delete, .starwarsffg.sheet.item .item-sheet-career .specialization-pill.item-pill2 .item-delete {
   cursor: pointer;
 }
+
+.combat-sidebar li.combatant .roll {
+    display: block;
+    width: 40px;
+    height: var(--sidebar-item-height);
+    background: url(../../../icons/svg/d20.svg) no-repeat 50% 50%;
+    background-size: 32px;
+    margin: 0 0.5em;
+}
